完善任务管理
